--- a/HourTrackerGUI/src/HourTracker/HourTracker.fxml
+++ b/HourTrackerGUI/src/HourTracker/HourTracker.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.control.TextField?>
 <GridPane fx:controller="HourTracker.Controller"
+          stylesheets="/HourTracker/HourTracker.css"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
 
     <padding><Insets top="25" right="25" bottom="10" left="25"/></padding>
